# channels-kafka

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml  test.yml
channels_kafka/: core.py  multiqueue.py  util.py
tests/: test_core.py
