[project]
name = "channels-kafka"
version = "0.1.0"
description = "Kafka Channels backend"
readme = "README.md"
license = "MIT"

requires-python = ">=3.8"
dependencies = [
    "channels>=3,<5",
    "kafka-python>=2.2.0",
    "msgpack>=1.1.0",
]
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest-docker>=3.2.1",
]
