[project]
name = "channels-kafka"
version = "0.1.0"
description = "Kafka Channels backend"
readme = "README.md"
license = "MIT"

requires-python = ">=3.8"
dependencies = [
    "aiokafka>=0.11.0",
    "channels>=3,<5",
    "msgpack>=1.1.0",
]
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
flush = [
    "kafka-python>=2.2.15",
]

[dependency-groups]
dev = [
    "kafka-python>=2.2.15",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-docker>=3.2.1",
    "pytest-timeout>=2.4.0",
]
