[project]
name = "channels-kafka"
version = "0.1.0"
description = "Kafka Channels backend"
readme = "README.md"
license = "MIT"

requires-python = ">=3.11"
dependencies = [
    "aiokafka",
    "channels>=3,<5",
    "msgpack>=1.1.0",
]
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.4.0",
]

[tool.uv.sources]
aiokafka = { git = "https://github.com/PawelKawula/aiokafka" }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--log-format='%(asctime)s - %(name)s:%(lineno)s - %(levelname)s - %(message)s' --log-date-format='%m/%d/%Y %H:%M:%S.%f'"
